srv-2/deploy-v1.9.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: istio-srv2-v2
  labels:
    app: srv-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: srv-2
  template:
    metadata:
      labels:
        app: srv-2
        version: v2
    spec:
      containers:
      - name: istio-srv2
        image: requena/istio-srv2:1.9
        ports:
          - containerPort: 5000
