srv-2/destination-rule-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: srv-2
spec:
  host: srv-2
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
