srv-2/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: srv-2
spec:
  hosts:
  - srv-2
  http:
  - route:
    - destination:
        host: srv-2
